# Thesis-Project

./: .gitignore  readme.md  requirements.txt
docs/architecture/: top-level.drawio
notes/: Adjacency graph of contact states.md
src/: readme.md
src/Clapp/: pyproject.toml
src/Clapp/clapp/: cli.py  model.py
src/message_test_pkg/: CMakeLists.txt  package.xml  readme.md
src/message_test_pkg/msg/: People.msg
src/message_test_pkg/src/: publisher.py  subscriber.py
src/mujoco_pkg/: CMakeLists.txt  package.xml
src/mujoco_pkg/src/: adjacency_graph.py  cli.py  mujoco_twin_node.py
src/mujoco_pkg/src/models/: configuration_state.py  edge.py  face.py  vertex.py
src/mujoco_pkg/test/: main_test.py
src/peg_in_hole/: CMakeLists.txt  package.xml
src/peg_in_hole/launch/: bringup_turtlesim.launch  dynamic_turtlesim.launch
src/peg_in_hole/src/: publisher.py  subscriber.py
src/service_tut_pkg/: CMakeLists.txt  package.xml  readme.md
src/service_tut_pkg/src/: addition_client.py  addition_server.py  empty_server.py
src/thesis_pkg/: CMakeLists.txt  package.xml
src/thesis_pkg/msg/: CartesianPose.msg  DOF.msg  RedundancyInformation.msg
src/thesis_pkg/src/: __main__.py
src/thesis_pkg/src/insertion/: contact_formations.py
src/thesis_pkg/src/model/: configuration_state.py  edge.py  face.py  facet.py  vertex.py
src/thesis_pkg/src/my_ros/: controller.py
src/thesis_pkg/src/my_types/: axis.py
src/thesis_pkg/src/notebooks/: contact_demo.ipynb  gen_models.ipynb  main_demo.ipynb  (+1 more)
src/thesis_pkg/srv/: TimeToDestination.srv
src/thesis_pkg/test/: main_test.py
(+29 files in other folders)
